@@ -6,6 +6,8 @@ with respect to new features and compatibility changes.
 
 2020-09-25
  * Fulltext queries generated by Rest generate_relationship are merged into a single query rather than being "OR"ed together.
+ * The debounce time on wing_object().search has been changed from 200 to 500 ms.
+ * The wing-pagination component has been changed to use the non-debounced version of wing.object_list().search.
 
 2020-09-24
  * Added "fulltextquery" as a key in Rest named_options. Use it instead of "queryable" to perform a MySQL MATCH() AGAINST() fulltext instead of a typical LIKE substring search. Note that you'll need a fulltext index for that field in order to use this option. 
